--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   table_calendar: ^3.2.0
+  sqflite: ^2.3.0
+  path: ^1.8.3
+  image_picker: ^1.0.7
 
 dev_dependencies:
   flutter_test:
