--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,11 @@ dependencies:
   sqflite: ^2.3.0
   path: ^1.8.3
   image_picker: ^1.0.7
+  
+  speech_to_text: ^7.0.0
+  flutter_gemini: ^3.0.0
+  shared_preferences: ^2.2.2
+  http: ^1.3.0
 
 dev_dependencies:
   flutter_test:
