--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   sqflite: ^2.3.0
   path: ^1.8.3
   image_picker: ^1.0.7
+  flutter_gemini: ^3.0.0
+  fl_chart: ^0.66.0
 
 dev_dependencies:
   flutter_test:
