--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   flutter_gemini: ^3.0.0
   shared_preferences: ^2.2.2
   http: ^1.3.0
+  home_widget: ^0.7.0+1
 
 dev_dependencies:
   flutter_test:
