--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,7 +44,8 @@ dependencies:
   shared_preferences: ^2.2.2
   http: ^1.3.0
   home_widget: ^0.7.0+1
-  fl_chart: ^0.66.0
+  fl_chart: ^0.71.0
+  connectivity_plus: ^6.1.4
 
 dev_dependencies:
   flutter_test:
