--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,13 @@ dependencies:
   home_widget: ^0.7.0+1
   fl_chart: ^0.71.0
   connectivity_plus: ^6.1.4
+  flutter_riverpod: ^2.6.1
+  flutter_map: ^8.1.1
+  latlong2: ^0.9.1
+  flutter_map_cancellable_tile_provider: ^3.1.0
+  geolocator: ^14.0.0
+  flutter_map_tile_caching: ^10.1.1
+  permission_handler: ^12.0.0+1
 
 dev_dependencies:
   flutter_test:
