--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,8 @@ dependencies:
   geolocator: ^14.0.0
   flutter_map_tile_caching: ^10.1.1
   permission_handler: ^12.0.0+1
+  share_plus: ^11.0.0
+  pdf: ^3.10.8
 
 dev_dependencies:
   flutter_test:
